# Kingdom-System

./: .dev.env  .gitignore  DEPENDENCIES.md  README.md  RULES.md
Common/kingdom_system/kingdom_system/src/app/: layout.tsx  page.tsx  style.css
Common/kingdom_system/kingdom_system/src/app/Components/: CommonButton.tsx  FirstBlock.tsx  FourBlock.tsx  Header.tsx  OurSponsors.tsx  PrimaryButton.tsx  SecondBlock.tsx
Libraries/proto/: Authenticate.proto
Scripts/: go_gen_proto.sh
Services/: docker-compose.yml  prod.env
Services/Mikhail/: Dockerfile  go.mod  go.sum  main.go  pyproject.toml  redis_storage.go  security.go  server.go
Services/Mikhail/Source/: Logger.py  README.md  __main__.py  authenticate_service.py  environment.py  oauth2_config.py  toaster.py
Services/Mikhail/Source/proto/: Authenticate_pb2.py  Authenticate_pb2_grpc.py
Services/redis/: Dockerfile  redis.conf
